Update privacy .html

--- a/privacy .html
+++ b/privacy .html
@@ -4,69 +4,68 @@
     <meta charset="UTF-8" />
     <title>Privacy&Policy</title>
     <style>
-      body {
+        body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
             margin: 20px;
             padding-left: 5%;
             padding-right: 5%;
         }
-    img{
-        width: 500px;
-        height: 250px;
-      }
-      p{
-        font-size: 15px;
-        font-family: sans-serif;
-      }
-      h1{
-        font-size: 20px;
-        font-family: sans-serif;
-        text-align: center;
-      }
-      h2, h3{
-        font-size: 20px;
-        font-family: sans-serif;
-        text-align: left;
-      }
-      ul {
+        img {
+            width: 500px;
+            height: 250px;
+        }
+        p {
+            font-size: 15px;
+            font-family: sans-serif;
+        }
+        h1 {
+            font-size: 20px;
+            font-family: sans-serif;
+            text-align: center;
+        }
+        h2, h3 {
+            font-size: 20px;
+            font-family: sans-serif;
+            text-align: left;
+        }
+        ul {
             margin-left: 20px;
         }
         .contact-info {
             margin-top: 20px;
             font-weight: bold;
         }
-  
     </style>
 </head>
 <body>
     <h1>Privacy & Policy</h1>
     <img src="images/standard-quality-control-collage.jpg" alt="privacy html">
     <p><strong>Introduction</strong></p>
-    <p>Myntra operates under the brand name “Myntra” (hereinafter referred to as the "Company" or “We” or “Us” or “Our”) and collects information from the user accounts created by individuals on the Cred Buddha platform. It also collects data from other digital sources of information relating to such individuals (each a “User”) as set out herein. Cred Buddha uses the information to undertake, and accounts each Users’ credit worthiness which in turn may enable such Users to make applications for one or more credit facilities (each an “Application for Credit”) to credit providing financial institutions affiliated with Cred Buddha (referred as “Cred Buddha Partner”). Each of the credit worthiness assessment and the application for a credit facility form part of services offered by Cred Buddha to Users and Cred Buddha Partners (individually and collectively the “Services”).</p>
-    <p>The Company collects information from users at the time of account creation as well as on an ongoing basis from their emails, text messages, mobile phone address book, social media profiles and such other sources as authorized by the users and mingles it to create unique profiles for individuals that it uses in conjunction with proprietary algorithms to determine whether or not a particular individual should be offered the Service. We also provide risk evaluation and management services to the Cred Buddha Partners.</p>
-    <p>The Service also relies on other factors such as the amount/limit of credit facility (“Advance”) sought and other parameters/requirements set out by Cred Buddha Partners including their credit eligibility parameters. Kindly note that all individuals whose information is collected by the Company will not be offered the Credit Facility of the Service because the Service provides a dynamic evaluation of risk. Hence, the Company or the Cred Buddha Partner independently may evaluate an individual’s application and may allow him/her to submit an Application for Credit for a sum up to a specified credit limit, unique to that individual based on his credit analysis, to a Cred Buddha Partner but disallow submission of Application for Credit to another Cred Buddha Partner. Each offer of Service made by the Company is based on the Company’s proprietary and discretionary decision-making methodologies and also relies on the credit risk requirements specified by a Cred Buddha Partner.</p>
+    <p>Myntra operates under the brand name “Myntra” (hereinafter referred to as the "Company" or “We” or “Us” or “Our”) and collects information from the user accounts created by individuals on the Myntra platform. It also collects data from other digital sources of information relating to such individuals (each a “User”) as set out herein. Myntra uses the information to undertake, and accounts each Users’ credit worthiness which in turn may enable such Users to make applications for one or more credit facilities (each an “Application for Credit”) to credit providing financial institutions affiliated with Myntra (referred as “Myntra Partner”). Each of the credit worthiness assessment and the application for a credit facility form part of services offered by Myntra to Users and Myntra Partners (individually and collectively the “Services”).</p>
+    <p>The Company collects information from users at the time of account creation as well as on an ongoing basis from their emails, text messages, mobile phone address book, social media profiles and such other sources as authorized by the users and mingles it to create unique profiles for individuals that it uses in conjunction with proprietary algorithms to determine whether or not a particular individual should be offered the Service. We also provide risk evaluation and management services to the Myntra Partners.</p>
+    <p>The Service also relies on other factors such as the amount/limit of credit facility (“Advance”) sought and other parameters/requirements set out by Myntra Partners including their credit eligibility parameters. Kindly note that all individuals whose information is collected by the Company will not be offered the Credit Facility of the Service because the Service provides a dynamic evaluation of risk. Hence, the Company or the Myntra Partner independently may evaluate an individual’s application and may allow him/her to submit an Application for Credit for a sum up to a specified credit limit, unique to that individual based on his credit analysis, to a Myntra Partner but disallow submission of Application for Credit to another Myntra Partner. Each offer of Service made by the Company is based on the Company’s proprietary and discretionary decision-making methodologies and also relies on the credit risk requirements specified by a Myntra Partner.</p>
     <p>The Company values your privacy and is committed to ensuring that you are aware of how your information is being used. The Company actively seeks to minimize the manual interventions and review of data as the Company wants to offer the Service in a real-time online environment with the parameters including, but not limited to the Company’s servers and your internet amongst others. Therefore, while the Company does not rule out the possibility that your information stored in the Company’s database will be accessed and reviewed by an employee or contractor of the Company in the performance of their official duties, your information will mostly be accessed, reviewed, analyzed and modified by the Company’s computer programs, API or APKs. The Company will make reasonable efforts to ensure that human access to your information stored in the Company’s databases is limited to that necessary for servicing your account following your requests from time to time.</p>
-    <p>The Company will collect, store and use your information only for providing the services to you as permitted by applicable law, to offer certain services to the Cred Buddha Partners concerning their transactions with you.</p>
+    <p>The Company will collect, store and use your information only for providing the services to you as permitted by applicable law, to offer certain services to the Myntra Partners concerning their transactions with you.</p>
     <p>This Privacy Policy endeavors to inform you of the types of information that may be collected, and know-how such information is collected, used, processed, disclosed and maintained. This Privacy Policy must be read in conjunction with the Terms of Service, Terms of Use and any other terms and conditions about the Service that may be set out by the Company on its Website.</p>
-    <p>Please read and understand this Privacy Policy carefully. Your installation of the Cred Buddha mobile application and/or use or access of the Services shall constitute your agreement to this Privacy Policy. If you do not agree with our policies and our practices as described in this Privacy Policy, your choice is to not use the Services. You will always have the ability to opt-in and opt-out of the Service by sending us a request at <a href="https://credbuddha.com">CredBuddha.com</a>. However, the Company will retain certain of your information to the extent required to maintain a “Do Not Contact/Do Not Offer” list.</p>
+    <p>Please read and understand this Privacy Policy carefully. Your installation of the Myntra mobile application and/or use or access of the Services shall constitute your agreement to this Privacy Policy. If you do not agree with our policies and our practices as described in this Privacy Policy, your choice is to not use the Services. You will always have the ability to opt-in and opt-out of the Service by sending us a request at <a href="https://myntra.com">Myntra.com</a>. However, the Company will retain certain of your information to the extent required to maintain a “Do Not Contact/Do Not Offer” list.</p>
     <p><strong>BY ACCEPTING THE PRIVACY POLICY, YOU EXPRESSLY CONSENT TO COMPANY’S COLLECTION, RETENTION, ANALYSIS, USE AND DISCLOSURE OF YOUR PERSONAL INFORMATION FOLLOWING THIS PRIVACY POLICY.</strong></p>
 
     <h2>Applicability of the Privacy Policy</h2>
-    <p>This Privacy Policy shall apply to all information the Company collects either from you or the Cred Buddha Partner(s). The information the Company collects for the provision of Services are as follows:</p>
+    <p>This Privacy Policy shall apply to all information the Company collects either from you or the Myntra Partner(s). The information the Company collects for the provision of Services are as follows:</p>
     
     <h3>Contact or Identification Information</h3>
     <p>This includes but is not limited to your name, email, phone number, passport number or other similar heads of information that allow us to accurately identify you.</p>
 
     <h3>Transaction Information</h3>
-    <p>This includes information such as historical data of your transactions with the Cred Buddha Partner, including the total number of Advance(s) availed, the total outstanding in a specific or across all the Advance(s) availed by you, the repayment schedule and the amount(s) repaid by you to the Cred Buddha Partner(s) as well as your consumption habits, items purchased, rides taken, tickets purchased, items you have selected for purchase, method of payment used or other similar heads of information based on the information stored on your mobile phone and other digital sources of Information that you provided the Company with access to. This information is collected to allow the Company to understand your transactional activity which in turn informs and allows the Company to refine the credit risk assessment associated with You.</p>
+    <p>This includes information such as historical data of your transactions with the Myntra Partner, including the total number of Advance(s) availed, the total outstanding in a specific or across all the Advance(s) availed by you, the repayment schedule and the amount(s) repaid by you to the Myntra Partner(s) as well as your consumption habits, items purchased, rides taken, tickets purchased, items you have selected for purchase, method of payment used or other similar heads of information based on the information stored on your mobile phone and other digital sources of Information that you provided the Company with access to. This information is collected to allow the Company to understand your transactional activity which in turn informs and allows the Company to refine the credit risk assessment associated with You.</p>
 
     <h3>Personal & Device Information</h3>
-    <p>Cred Buddha will collect Name, phone number, email ID, PAN, date of birth, pin code, nature of employment and name of employer, monthly income, marital status and relationship with the co-applicant (in case the loan is being sought by more than a single applicant). We or our Lending Partner may require you to share further information on a later date to confirm the veracity of your information or pursuant to any additional features added to the App. We may collect certain user documents and certain information about your mobile or computing device, communication device, browser information, IP address including, for example, the hardware model, operating system and version, software and file names and versions, preferred language, unique device identifier, advertising identifiers, serial number, device motion information, and mobile network information or other similar heads of information that allow us to accurately identify you. We may collect certain documents of the users and certain information about user mobile or computing device, communication device, browser information, IP address including, for example, the hardware model, operating system and version, software and file names and versions, preferred language, unique device identifier, advertising identifiers, serial number, device motion information, and mobile network information or other similar heads of information that allow us to accurately identify you. We may also collect specific types of information stored in the devices of the User, that enable the App and its Services; For Enabling Customer Support; For Research and Development; For Enabling Communications Between You and Us; For enabling Marketing and Outreach; For Automated Decisions; For Legal Compliance and Requirements.</p>
+    <p>Myntra will collect Name, phone number, email ID, PAN, date of birth, pin code, nature of employment and name of employer, monthly income, marital status and relationship with the co-applicant (in case the loan is being sought by more than a single applicant). We or our Lending Partner may require you to share further information on a later date to confirm the veracity of your information or pursuant to any additional features added to the App. We may collect certain user documents and certain information about your mobile or computing device, communication device, browser information, IP address including, for example, the hardware model, operating system and version, software and file names and versions, preferred language, unique device identifier, advertising identifiers, serial number, device motion information, and mobile network information or other similar heads of information that allow us to accurately identify you. We may collect certain documents of the users and certain information about user mobile or computing device, communication device, browser information, IP address including, for example, the hardware model, operating system and version, software and file names and versions, preferred language, unique device identifier, advertising identifiers, serial number, device motion information, and mobile network information or other similar heads of information that allow us to accurately identify you. We may also collect specific types of information stored in the devices of the User, that enable the App and its Services; For Enabling Customer Support; For Research and Development; For Enabling Communications Between You and Us; For enabling Marketing and Outreach; For Automated Decisions; For Legal Compliance and Requirements.</p>
 
     <h3>Financial and KYC Information</h3>
-    <p>For undertaking any financial transaction through Myntra, you agree and acknowledge that we may undertake customer due diligence measures and seek mandatory information required for KYC purposes which as a customer you are obliged to give in order to avail such services. You agree and acknowledge that Cred Buddha can undertake enhanced due diligence measures (including any documentation), to satisfy itself relating to customer due diligence requirements in line with the requirements and obligations. We and our Lending Partner collect the data you provide when you accept the tentative terms of the loans. This includes your photograph, Aadhaar Number, PAN, parents’ names, bank account number, IFSC, proof of address (which can be your electricity bill, rental/lease agreement, gas bill, passport or driver’s license, or voter’s identity card or any other document our App may be able to record). We may require one time access to camera and microphone and location or any other facility for onboarding and KYC purposes only with the explicit consent of the user.</p>
-    <p>Cred Buddha app also allows the user to identify the right jobs which are matching with the user profile. By uploading the Text/Video profile, users will be allowed to use the service at no cost.</p>
+    <p>For undertaking any financial transaction through Myntra, you agree and acknowledge that we may undertake customer due diligence measures and seek mandatory information required for KYC purposes which as a customer you are obliged to give in order to avail such services. You agree and acknowledge that Myntra can undertake enhanced due diligence measures (including any documentation), to satisfy itself relating to customer due diligence requirements in line with the requirements and obligations. We and our Lending Partner collect the data you provide when you accept the tentative terms of the loans. This includes your photograph, Aadhaar Number, PAN, parents’ names, bank account number, IFSC, proof of address (which can be your electricity bill, rental/lease agreement, gas bill, passport or driver’s license, or voter’s identity card or any other document our App may be able to record). We may require one time access to camera and microphone and location or any other facility for onboarding and KYC purposes only with the explicit consent of the user.</p>
+    <p>Myntra app also allows the user to identify the right jobs which are matching with the user profile. By uploading the Text/Video profile, users will be allowed to use the service at no cost.</p>
 
     <h3>Card and Financial Information</h3>
     <p>For the provision of services, we will collect the following types of banking information from you, credit/debit card details such as the first six or the last four digits of your card number, wallet details (as and when required), all your transactions history through our app and/or through any payment gateway service providers. Our payment gateways service providers will collect your credit/debit card details for processing your payments. The banking information collected from you is kept secure and encrypted. This information will be utilized to improve your experience with our application, as well as to improve the experience of our other users; For example, we may use the information to check and analyze your repayment behavior to ascertain whether the loan offers match your current financial position and qualification criteria, the loan offers would also depend on the terms and conditions of our Lending Partner and are subject to change.</p>
@@ -113,7 +112,4 @@
 
     <p class="contact-info">Email: bindupalapal9515gmail.com</p>
 </body>
-</html>
-    
-  </body>
 </html>
